[package]
name = "rustls-pemfile"
version = "1.0.4"
edition = "2018"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Basic .pem file parser for keys and certificates"
homepage = "https://github.com/rustls/pemfile"
repository = "https://github.com/rustls/pemfile"
categories = ["network-programming", "cryptography"]

[dependencies]
base64 = "0.21"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "benchmark"
harness = false
