[package]
name = "rustls-pemfile"
version = "2.1.2"
edition = "2018"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Basic .pem file parser for keys and certificates"
homepage = "https://github.com/rustls/pemfile"
repository = "https://github.com/rustls/pemfile"
categories = ["network-programming", "cryptography"]

[dependencies]
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
pki-types = { package = "rustls-pki-types", version = "1.3" }

[dev-dependencies]
bencher = "0.1.5"

[features]
default = ["std"]
std = ["base64/std"]

[[bench]]
name = "benchmark"
harness = false

[[test]]
name = "integration"
required-features = ["std"]
